[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/cells/broken_cell.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/actors/simon.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/actors/unknown.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/scripts/freeplay.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/Daydream.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/typing/typing_game.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/cells/classroom_cell.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/cells/locker_cell_2.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/scripts/cell_manager.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
resource_name = "begin_game"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Intro/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "start", "3", "2", "1", "Begin!" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Intro/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Intro/ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.501961 ), Color( 0, 0, 0, 0.501961 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "waiting"
tracks/0/type = "value"
tracks/0/path = NodePath("Intro/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.67451 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Intro/Label:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "ready?" ]
}

[node name="FreePlay" type="Node2D"]
script = ExtResource( 4 )

[node name="CellManager" type="Node2D" parent="."]
script = ExtResource( 9 )
walking = false

[node name="Cells" type="Node2D" parent="CellManager"]

[node name="Cell1" type="Node2D" parent="CellManager/Cells"]

[node name="BrokenCell" parent="CellManager/Cells/Cell1" instance=ExtResource( 1 )]

[node name="Cell2" type="Node2D" parent="CellManager/Cells"]
position = Vector2( 240, 0 )

[node name="LockerCell Type 2" parent="CellManager/Cells/Cell2" instance=ExtResource( 8 )]

[node name="Cell3" type="Node2D" parent="CellManager/Cells"]
position = Vector2( 480, 0 )

[node name="ClassCell" parent="CellManager/Cells/Cell3" instance=ExtResource( 7 )]

[node name="Simon" parent="." instance=ExtResource( 2 )]

[node name="Challenger" type="Node2D" parent="."]
position = Vector2( 186, 70 )

[node name="Unknown" parent="Challenger" instance=ExtResource( 3 )]
position = Vector2( 0, 0 )

[node name="AnimatedSprite" parent="Challenger/Unknown" index="0"]
frame = 2
flip_h = true

[node name="TypeHandler" parent="." instance=ExtResource( 6 )]

[node name="Intro" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Intro"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Intro"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.5
margin_top = -11.0
margin_right = 76.5
margin_bottom = 11.0
custom_fonts/font = SubResource( 1 )
text = "start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/begin_game = SubResource( 2 )
anims/waiting = SubResource( 3 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Simon"]
[editable path="Challenger/Unknown"]
